--- a/OM/run_config.json
+++ b/OM/run_config.json
@@ -42,10 +42,17 @@
         "energy": "6"
     },
     "730255": {
-        "x_cry_cut": [4.7, 5.2],
-        "y_cry_cut": [4.65, 5.15],
+        "x_cry_cut": [4.5, 5],
+        "y_cry_cut": [7, 7.5],
         "sample": "W0.1mm",
         "type": "Axial",
+        "energy": "6"
+    },
+    "730256": {
+        "x_cry_cut": [4.5, 5],
+        "y_cry_cut": [7, 7.5],
+        "sample": "W0.1mm",
+        "type": "Amorphous",
         "energy": "6"
     }
 }
