--- a/OM/run_config.json
+++ b/OM/run_config.json
@@ -89,5 +89,19 @@
         "sample": "W12",
         "type": "Axial",
         "energy": "2.86"
-    }
+    },
+    "730278": {
+        "x_cry_cut": [4.5, 5],
+        "y_cry_cut": [7, 7.5],
+        "sample": "W0.1",
+        "type": "rot search",
+        "energy": "2.86"
+    },
+    "730279": {
+        "x_cry_cut": [4.5, 5],
+        "y_cry_cut": [7, 7.5],
+        "sample": "W0.1",
+        "type": "rot search",
+        "energy": "2.86"
+    },
 }
