--- a/OM/run_config.json
+++ b/OM/run_config.json
@@ -69,6 +69,34 @@
         "type": "guess + 5mrad rot",
         "energy": "6"
     },
+    "730264": {
+        "x_cry_cut": [4.5, 5],
+        "y_cry_cut": [7, 7.5],
+        "sample": "W0.1mm",
+        "type": "rot search ",
+        "energy": "6"
+    },
+    "730265": {
+        "x_cry_cut": [4.5, 5],
+        "y_cry_cut": [7, 7.5],
+        "sample": "W0.1mm",
+        "type": "rot search ",
+        "energy": "6"
+    },
+    "730266": {
+        "x_cry_cut": [4.5, 5],
+        "y_cry_cut": [7, 7.5],
+        "sample": "W0.1mm",
+        "type": "rot search ",
+        "energy": "6"
+    },
+    "730267": {
+        "x_cry_cut": [4.5, 5],
+        "y_cry_cut": [7, 7.5],
+        "sample": "W0.1mm",
+        "type": "rot search ",
+        "energy": "6"
+    },
     "730271": {
         "x_cry_cut": [4.5, 5],
         "y_cry_cut": [7, 7.5],
@@ -95,13 +123,41 @@
         "y_cry_cut": [7, 7.5],
         "sample": "W0.1",
         "type": "rot search",
-        "energy": "2.86"
+        "energy": "6"
     },
     "730279": {
         "x_cry_cut": [4.5, 5],
         "y_cry_cut": [7, 7.5],
         "sample": "W0.1",
         "type": "rot search",
-        "energy": "2.86"
+        "energy": "6"
     },
+    "730285": {
+        "x_cry_cut": [4.5, 5],
+        "y_cry_cut": [7, 7.5],
+        "sample": "W0.1",
+        "type": "rot search",
+        "energy": "6"
+    },
+    "730286": {
+        "x_cry_cut": [4.5, 5],
+        "y_cry_cut": [7, 7.5],
+        "sample": "W0.1",
+        "type": "rot search",
+        "energy": "6"
+    },
+    "730287": {
+        "x_cry_cut": [4.5, 5],
+        "y_cry_cut": [7, 7.5],
+        "sample": "W0.1",
+        "type": "rot search far",
+        "energy": "6"
+    },
+    "730289": {
+        "x_cry_cut": [4.5, 5],
+        "y_cry_cut": [7, 7.5],
+        "sample": "W0.1",
+        "type": "rot search far",
+        "energy": "6"
+    }
 }
